# termula

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-to-prod.yml
HomebrewFormula/: termula.rb
assets/: gen-cast.py  gen-image-demo.py  gen-unicode-demo.typ
docs/: termula-project-design.md
src/: config.rs  converter.rs  main.rs  renderer.rs  scanner.rs  stream_scanner.rs  terminal.rs  wrapper.rs
tests/: integration.rs
